[商品カテゴリー作成途中]

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -35,6 +35,7 @@
         <% end %>
       </tbody>
     </table>
-    <%= link_to "追加する" ,new_admin_item_path %>
+    <%= link_to "商品を追加する" ,new_admin_item_path %>
+    <%= link_to "商品カテゴリーを追加する" ,admin_item_categories_path %>
   </div>
 </div>
