--- a/app/views/admin/item_categories/edit.html.erb
+++ b/app/views/admin/item_categories/edit.html.erb
@@ -1,4 +1,4 @@
-<!-- ジャンル編集画面-->
+<!-- 商品カテゴリー編集画面-->
 <div class="container">
   <div class="mt-4 mx-3 my-3 col-6">
     <h4 class="p-3 mb-5 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">商品カテゴリー編集</h4>
