--- a/app/views/admin/item_categories/index.html.erb
+++ b/app/views/admin/item_categories/index.html.erb
@@ -1,7 +1,7 @@
-<!-- ジャンル編集画面-->
+<!-- 商品カテゴリー編集画面-->
 <div class="container">
   <div class="row mt-3">
-    <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">ジャンル一覧・追加</h4>
+    <h4 class="p-3 mb-2 w-50 text-center" style="color: #494949; background: #80aba9; border-left: solid 5px #2f4f4f;">商品カテゴリー一覧・追加</h4>
   </div>
   <div class="row">
     <div class="col-10 my-3">
