成分詳細、追加ページ作成

--- a/app/views/admin/comp_categories/index.html.erb
+++ b/app/views/admin/comp_categories/index.html.erb
@@ -23,7 +23,7 @@
             <%= comp_categories.name %>
           </td>
           <td>
-            <%= link_to "編集する", edit_admin_comp_category_path(c_categories.id), class: "btn btn-outline-success" %>
+            <%= link_to "編集する", edit_admin_comp_category_path(comp_categories.id), class: "btn btn-outline-success" %>
           </td>
         </tr>
         <% end %>
