--- a/app/views/admin/components/index.html.erb
+++ b/app/views/admin/components/index.html.erb
@@ -20,10 +20,9 @@
       <tbody>
         <% @components.each do |component| %>
           <tr>
-            <td><%= attachment_image_tag item, :item_image , format: 'jpg', fallback: "no_image.jpg", size: "50x50" %></td>
-            <td><%= link_to item.item_name,admin_item_path(item), class:"text-secondary" %></td>
-            <td><%= item.item_category.name %></td>
-            <td><%= item.status %></td>
+            <td><%= link_to component.name,admin_component_path(component), class:"text-secondary" %></td>
+            <td><%= component.comp_category.name %></td>
+            <td><%= component.status %></td>
             <td>
               <% if component.status? %>
                 <p class="text-success">販売</p>
