--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <!-- 利用者がログインしている時 -->
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to user_path do %>
+            <%= link_to user_path(current_user) do %>
               <i class="fas fa-user-cog"> マイページ </i>
             <% end %>
           </li>
