--- a/app/views/users/components/show.html.erb
+++ b/app/views/users/components/show.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div class="col-md-2">
       <!-- ジャンル検索サイドバー  -->
-      <%= render 'users/items/category', categories: @categories %>
+      <%= render 'users/components/category', categories: @categories %>
     </div>
   </div>
 </div>
