--- a/app/views/users/items/show.html.erb
+++ b/app/views/users/items/show.html.erb
@@ -3,6 +3,8 @@
     <div class="col-2 col-md-2">
       <!-- 利用者情報サイドバー  -->
       <%= render 'info', user: current_user %>
+      <!-- ジャンル検索サイドバー  -->
+      <%= render 'users/items/category', categories: @categories %>
     </div>
     <div class="col-md-8">
       <!-- 商品イメージ -->
@@ -12,14 +14,28 @@
       <!-- 商品詳細 -->
       <div class="item-detail">
         <h3><strong><%= @item.name %></strong></h3>
+        <p><%= render 'users/favorites/favorite-btn', item: @item %>コメント件数：<%= @item.comments.count %></p>
         <p><%= @item.explanation %></p>
         <p><%= @item.component %></p>
       </div>
-      
-    </div>
-    <div class="col-md-2">
-      <!-- ジャンル検索サイドバー  -->
-      <%= render 'customers/items/genre_sidebar', categories: @categories %>
+      <div>
+        <% @item.comments.each do |item_comment| %>
+          <p><%#= image_tag('sample-author1.jpg') %></p>
+          <%= item_comment.user.nickname %>
+          <%= item_comment.created_at.strftime('/%m/%d') %><%= item_comment.comment %>
+        <% end %>
+        <% if comment.user == current_user %>
+        <div>
+          <%= link_to "削除",item_comment_path(comment.item, comment), method: :delete %>
+        </div>
+        <% end %>
+      </div>
+      <div>
+        <%= form_with(model:[@item, @comment], local: true) do |f| %>
+          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
