--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -9,7 +9,7 @@
         <table class='table table-borderless'>
           <tr>
            <td><%= f.label :商品画像 ,class: "col-xs-3" %></td>
-           <td><%#= f.attachment_field :item_image, autofocus: true, autocomplete: "item_image" , class: "col-xs-8" %></td>
+           <td><%= f.attachment_field :item_image, autofocus: true, autocomplete: "item_image" , class: "col-xs-8" %></td>
           </tr>
           <tr>
            <td><%= f.label :商品カテゴリー ,class: "col-xs-3 fix" %></td>
