--- a/app/views/users/users/edit.html.erb
+++ b/app/views/users/users/edit.html.erb
@@ -15,13 +15,12 @@
           <td><%= f.text_field :nickname, class:"form-control" %></td>
         </tr>
         <tr>
-          <td><%= f.label:生年月日, class: "float-left" %></td>
-          <td><%= f.text_field :birth_year, class:"form-control" %></td>
+          <td><%= f.label:お誕生日, class: "float-left" %></td>
           <td><%= f.text_field :birth_month, class:"form-control" %></td>
           <td><%= f.text_field :birth_day, class:"form-control" %></td>
         </tr>
         <tr>
-          <td><%= f.label :年齢, class: "float-left" %></td>
+          <td><%= f.label :年代, class: "float-left" %></td>
           <td><%= f.text_field :age, class:"form-control" %></td>
         </tr>
         <tr>
