--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -26,7 +26,7 @@
         </tr>
         <tr>
           <td>お気に入り商品一覧</td>
-          <td><%= @user.favorite.items %></td>
+          <td><%#= @user.favorite.items %></td>
         </tr>
         <tr>
           <td>会員ステータス</td>
@@ -40,7 +40,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><%= link_to "編集する", edit_admin_user_path(@customer.id), class: "btn btn-outline-success" %></td>
+          <td><%#= link_to "編集する", edit_admin_user_path(@customer.id), class: "btn btn-outline-success" %></td>
           <td><%#= link_to "注文履歴一覧を見る", admin_orders_path(@customer.id), class: "btn btn-outline-primary" %></td>
         </tr>
       </table>
