--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,6 @@
  *= require_tree .
  *= require_self
  */
-
-
+ @import "bootstrap";
 // body {
 //   background-image: image-url("no_image.jpg");}
