--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -13,8 +13,8 @@
           <td><%= @user.nickname %></td>
         </tr>
         <tr>
-          <td>生年月日（西暦）</td>
-          <td><%= @user.birth_year %>年<%= @user.birth_month %>月<%= @user.birth_day %>日</td>
+          <td>お誕生日</td>
+          <td><%= @user.birth_month %><%= @user.birth_day %></td>
         </tr>
         <tr>
           <td>年齢</td>
