--- a/app/views/users/users/_info.html.erb
+++ b/app/views/users/users/_info.html.erb
@@ -1,5 +1,5 @@
 <table class='table'>
-  <tr><%#= attachment_image_tag(user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
+  <tr><%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg" %></tr>
   <tr>
 	  <th>name</th>
 	  <th><%= user.nickname %></th>
@@ -7,12 +7,5 @@
 
 </table>
   <% if user.id == current_user.id %>
-  <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <%= link_to '編集',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
   <% end %>
-  <% if not user.id == current_user.id %>
-    <% if current_user.following?(user) %>
-    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class: 'btn btn-success' %>
-    <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: 'btn btn-success' %>
-    <% end %>  
-  <% end%>
