--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -13,7 +13,7 @@
         <tbody>
           <tr>
             <th>カテゴリー名</th>
-            <td><%= @item.comp_category.name %></td>
+            <td><%= @item.item_category.name %></td>
           </tr>
           <tr>
             <th>商品名</th>
