--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -13,17 +13,17 @@
           <td><%= f.text_field :nickname, class:"form-control" %></td>
         </tr>
         <tr>
-          <td><%= f.label:生年月日, class: "float-left" %></td>
-          <td><%= f.text_field :birth_month, class:"form-control" %></td>
-          <td><%= f.text_field :birth_day, class:"form-control" %></td>
+          <td><%= f.label:お誕生日, class: "float-left" %></td>
+          <td><%= select :user, :birth_month, User.birth_months.keys.to_a, include_blank: true, class:"form-control" %></td>
+          <td><%= select :user, :birth_day, User.birth_days.keys.to_a, include_blank: true %></td>
         </tr>
         <tr>
           <td><%= f.label :年齢, class: "float-left" %></td>
-          <td><%= f.text_field :age, class:"form-control" %></td>
+          <td><%= select :user, :age, User.ages.keys.to_a, include_blank: true %></td>
         </tr>
         <tr>
           <td><%= f.label :肌質 , class: "float-left" %></td>
-          <td><%= f.text_field :skin_type, class:"form-control" %></td>
+          <td><%= select :user, :skin_type, User.skin_types.keys.to_a, include_blank: true %></td>
         </tr>
         <tr>
           <td><%= f.label :"会員ステータス", class: "float-left" %></td>
