--- a/app/views/users/items/index.html.erb
+++ b/app/views/users/items/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid">
   <div class="row mt-5">
-    <div class="col-md-2">
+    <div class="col-md-2 ml-5">
       <!-- 利用者情報サイドバー  -->
       <%= render 'users/users/info', user: current_user %>
       <!-- ジャンル検索サイドバー  -->
       <%= render 'users/items/category', categories: @categories %>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-9">
       <h3 class="p-3 mb-2 w-50 text-center" style="color: #bc8f8f; background: #8f6552; border-left: solid 5px #6c3524; border-bottom: solid 3px #7b5544;"><strong>商品一覧</strong>（全<%= @items.count %>件）</h3>
       <% @items.each do |item| %>
         <div class="item-box">
