--- a/app/views/users/items/show.html.erb
+++ b/app/views/users/items/show.html.erb
@@ -18,17 +18,19 @@
         <p><%= @item.explanation %></p>
         <p><%= @item.component %></p>
       </div>
+
       <div>
-        <%# @item.comments.each do |comment| %>
-          <%#= comment.user.nickname %>
-          <%#= comment.created_at.strftime('/%m/%d') %><%#= comment.comment %>
-        <%# end %>
-        <%# if item_comment.user == current_user %>
-        <div>
-          <%#= link_to "削除", item_comment_path(comment.item, comment), method: :delete %>
+        <% @item.comments.each do |comment| %>
+          <%= comment.user.nickname %>
+          <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+          <% if comment.user == current_user %>
+        　　<div>
+        　     <!--<%= link_to "削除", item_comment_path(comment.item, comment), method: :delete %>-->
+      　　　　  </div>
+       　  <% end %>
+        <% end %>
         </div>
-        <%# end %>
-      </div>
+
       <div>
         <%= form_with(model:[@item, @comment], local: true) do |f| %>
           <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
