いいね順の表示作成

--- a/app/views/users/homes/search.html.erb
+++ b/app/views/users/homes/search.html.erb
@@ -1,42 +1,56 @@
-<h2>検索結果</h2>
-<!--items一覧 -->
-<table class="table table-hover table-inverse">
-  <% if @range == '1' %>
-  <thead>
-    <tr>
-     <th>商品写真</th>
-     <th>名前</th>
-     <th>カテゴリー名</th>
-     <th>説明</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @item.each do |item| %>
-    <tr>
-      <td><%= attachment_image_tag(item.item_image, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
-      <td><%= link_to item.name, item, class: "item_#{item.id}" %> </td>
-      <td><%= item.item_category.name %></td>
-      <td><%= item.explanation %></td>
-    </tr>
-    <% end %>
-  </tbody>
-  
-  <% else %>
-  <thead>
-     <tr>
-      <th>成分名</th>
-      <th>成分カテゴリー</th>
-      <th>説明</th>
-     </tr>
-   </thead>
-   <tbody>
-    <% @component.each do |component| %>
-     <tr>
-      <td><%= link_to component.name, component, class: "component_#{component.id}" %> </td>
-      <td><%= component.comp_category.name %></td>
-      <td><%= component.explanation %></td>
-     </tr>
-    <% end %>
-   </tbody>
-   <% end %>
- </table>
+<div class= container>
+  <div class= row>
+    <div class= col-md-2>
+      <!-- 利用者情報サイドバー  -->
+      <%= render 'users/users/info', user: current_user %>
+    </div>
+    <div class= col-md-10>
+      <!--items一覧 -->
+     <table class="table table-hover table-inverse">
+       <thead>
+         <tr>
+          <th>商品写真</th>
+          <th>名前</th>
+          <th>カテゴリー名</th>
+          <th>説明</th>
+         </tr>
+       </thead>
+       <tbody>
+         <% @items.each do |item| %>
+         <tr>
+           <td><%= attachment_image_tag item, :item_image , format: 'jpg', fallback: "no_image.jpg", size: "50x50" %></td>
+           <td><%= link_to item.name,item_path(item), class:"text-secondary" %></td>
+           <td><%= item.item_category.name %></td>
+           <td><%= item.status %></td>
+           <td>
+             <% if item.status? %>
+               <p class="text-success">販売</p>
+             <% else %>
+               <p class="text-secondary">廃盤</p>
+             <% end %>
+           </td> 
+         </tr>
+         <% end %>
+       </tbody>
+     </table>
+     <table class="table table-hover table-inverse">
+       <thead>
+          <tr>
+           <th>成分名</th>
+           <th>成分カテゴリー</th>
+           <th>説明</th>
+          </tr>
+        </thead>
+        <tbody>
+         <% @components.each do |component| %>
+          <tr>
+           <td><%= link_to component.name, component, class: "component_#{component.id}" %> </td>
+           <td><%= component.comp_category.name %></td>
+           <td><%= component.explanation.truncate(30) %></td>
+          </tr>
+         <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
