--- a/app/views/users/components/_category.html.erb
+++ b/app/views/users/components/_category.html.erb
@@ -6,12 +6,12 @@
   </thead>
   <tbody>
     <tr>
-      <td><%= link_to "ALL ITEMS", items_path, :style=> "color: #8f2e14;" %></td>
+      <td><%= link_to "ALL COMPONENTS", components_path, :style=> "color: #8f2e14;" %></td>
     </tr>
     <% categories.each do |category| %>
     <tr>
       <td>
-        <%= link_to category.name, search_path(category.id), :style=> "color: #96514d;" %>
+        <%= link_to category.name, comp_search_path(category.id), :style=> "color: #96514d;" %>
       </td>
     </tr>
     <% end %>
