--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -5,13 +5,8 @@
       <%= render 'users/users/info', user: current_user %>
     </div>
     <div class="col-md-9 ml-5 pt-5">
-      <% if user_signed_in? %>
-         <%= form_tag(search_path, method: :get) do %>
-      　　    <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['商品', '1'], ['成分', '2']]) %>
-         　　<%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
-         　　<%= text_field_tag (:word) %>
-         　　<%= submit_tag "検索" %>
-         <% end %>
+      <%= form_with url:search_path, method: :get, local: true do |f| %>
+        <input id="page_name" name='keyword' size="30" type="text" />
       <% end %>
       </div>
     </div>
