--- a/app/views/users/users/_info.html.erb
+++ b/app/views/users/users/_info.html.erb
@@ -7,5 +7,5 @@
 
 </table>
   <% if user.id == current_user.id %>
-  <%= link_to '編集',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <%= link_to 'マイページ',user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog user_#{user.id}" %>
   <% end %>
